<resources>
    <string name="app_name">Shop app</string>
    <string name="action_settings">Postavke</string>
    <string name="title_activity_config">Postavke</string>
    <string name="rssiLabel">%s [dB]</string>
    <string name="title_activity_shopping">Poslovnica</string>
    <string name="title_activity_discount_details">Detalji popusta</string>
    <string name="discovered_discounts">Otkriveni popusti:</string>
    <string name="product">Proizvod</string>
    <string name="old_price">Stara cijena</string>
    <string name="new_price">Nova cijena</string>
    <string name="discount">Popust</string>
    <string name="valid_to">Vrijedi do</string>
    <string name="ok">Uredu</string>
    <string name="exit">Izađi</string>
    <string name="main_screen_title">Dobrodošli</string>
    <string name="main_screen_message">Prislonite mobilni uređaj uz NFC oznaku i započnite sa traženjem popusta. Kada se približite artiklu na popustu, isti će vam se pojaviti na listi popust. Sve što je onda potrebno jest aktivirati popust i prikazati kod na blagajni! </string>
    <string name="main_screen_nfc_error">Za početak korištenja aplikacije uključite NFC senzor.</string>
    <string name="bluetooth_error">Bluetooth je isključen, uključite ga da biste koristili aplikaciju</string>
    <string name="wifi_error">Internetska konekcija je potrebna za korištenje aplikacije</string>
    <string name="bluetooth_turn_on">Uključi</string>
    <string name="gimbal_api_key">b004f8c0-d82f-4809-8b0c-a3698e0b8d79</string>
    <string name="without_bluetooth_app_doesnt_work">Bez Bluetooth-a aplikacija ne radi...</string>
    <string name="error">Greška</string>
    <string name="there_are_no_discounts_available">Nema dostupnih popusta.</string>
    <string name="discount_code">Kod za popust</string>
    <string name="code_received">Uspješno ste zaprimili kod za popust! Pokažite ga blagajniku kako bi ostvarili popust za navedeni artikal.</string>
    <string name="shop_details">Informacije o poslovnici</string>
    <string name="enable_nfc">Uključi NFC</string>
    <string name="rssi_title">Postavite osjetljivost BLE senzora</string>
    <string name="rssi_description">Postavite vrijednost u decibelima. Što je klizač više desno, to je veći domet senzora i veća mogućnost
        pronalaska popusta.
    </string>
    <string name="telefon">Telefon</string>
    <string name="adresa">Adresa</string>
    <string name="nfc_error">Pogreška pri čitanju NFC naljepnice</string>
</resources>
