<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".activities.ConfigActivity">


    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            style="@style/card_view">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/card_view_child">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rssi_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
            <TextView
                    android:id="@+id/tvMessage"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rssi_description"/>

            <SeekBar
                    android:id="@+id/sbRssi"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="24dp"
                    android:max="100"
                    android:progress="50" />
            <TextView
                    android:id="@+id/tvRssi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:text="@string/rssiLabel"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:layout_gravity="center"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvBeaconInfo"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp">



    </LinearLayout>

</RelativeLayout>
