<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/discount_details_top"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product"
                    style="@style/details_title"/>

            <TextView
                    android:id="@+id/tv_product"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/details_content"
                    tools:text="Test product"/>

    </LinearLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:background="@drawable/discount_details_bottom">

        <LinearLayout
                android:id="@+id/old_price_wrapper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/old_price"
                    style="@style/details_title"/>

            <TextView
                    android:id="@+id/tv_old_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/details_content"
                    tools:text="123"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/new_price_wrapper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentEnd="true">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/new_price"
                    style="@style/details_title"/>

            <TextView
                    android:id="@+id/tv_new_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/details_content"
                    android:gravity="end"
                    tools:text="100"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/discount_wrapper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_below="@id/old_price_wrapper">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/discount"
                    style="@style/details_title"/>

            <TextView
                    android:id="@+id/tv_discount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/details_content"
                    tools:text="23%"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/valid_to_wrapper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/old_price_wrapper"
                android:layout_alignParentEnd="true">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/valid_to"
                    android:gravity="end"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    style="@style/details_title"/>

            <TextView
                    android:id="@+id/tv_valid_to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    style="@style/details_content"
                    tools:text="1.1.2020."/>
        </LinearLayout>

        <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/discount_wrapper"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp">

            <Button
                    android:id="@+id/btn_discount_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:background="@drawable/dicount_button"
                    android:text="@string/get_the_discount_code"/>

            <LinearLayout
                    android:id="@+id/code_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:visibility="gone">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/discount_code"
                        android:gravity="center"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        style="@style/details_title"/>

                <TextView
                        android:id="@+id/tv_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        style="@style/details_content"
                        tools:text="1234-5678"/>
            </LinearLayout>

        </FrameLayout>
    </RelativeLayout>

</LinearLayout>